--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <section>
-    <div>
+  <section class="contact pad-t-2 pad-b-2">
+    <div class="max-length">
       <h1>Send us a sweet little note</h1>
 
       <form>
